New api tested- coin market cap + integrated node.js server

--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,9 @@
 .css-9obj1j-MuiTableRow-root {
   background : none !important;
 }
+
+
+.css-10he8s-MuiTable-root {
+  display: flex !important;
+  flex-wrap: wrap !important;
+}
