--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,10 @@
 .css-p51h6s-MuiInputBase-input-MuiOutlinedInput-input{
   height: 0.4375em !important;
 }
+
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
