--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif  !important;
+  -webkit-font-smoothing: antialiased !important;
+  -moz-osx-font-smoothing: grayscale !important;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  monospace !important;
+
+}
+
+.css-p51h6s-MuiInputBase-input-MuiOutlinedInput-input{
+  height: 0.4375em;
+}
+
 
 /*CUSTOM SCROLLBAR*/
 ::-webkit-scrollbar {
