--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+/*body {*/
+/*  margin: 0;*/
+/*  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',*/
+/*    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',*/
+/*    sans-serif  !important;*/
+/*  -webkit-font-smoothing: antialiased !important;*/
+/*  -moz-osx-font-smoothing: grayscale !important;*/
+/*}*/
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+/*code {*/
+/*  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',*/
+/*    monospace !important;*/
 
-.css-p51h6s-MuiInputBase-input-MuiOutlinedInput-input{
-  height: 0.4375em;
-}
+/*}*/
+
+/*.css-p51h6s-MuiInputBase-input-MuiOutlinedInput-input{*/
+/*  height: 0.4375em;*/
+/*}*/
