--- a/src/css/header/header.module.css
+++ b/src/css/header/header.module.css
@@ -29,7 +29,7 @@
 }
 
 .bottomNavContainer {
-    /*display: {xs: flex; md: flex};*/
+    padding-top: 10px;
     display: flex;
     position: fixed;
     bottom: 0;
@@ -39,6 +39,7 @@
 }
 
 .bottomNavigation {
+    padding-top: 10px;
     width: 100%;
     height: 100px;
 }
